# SlackRC

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  SlackToken
old/: .gitignore
old/src/: main.rs
src/: RTMStream.cpp  RTMStream.h  channel.cpp  channel.h  channelList.cpp  channelList.h  key.h  main.cpp  main.rs  makefile  root_certs.h  test.cpp  user.cpp  user.h  webAPI.cpp  webAPI.h
src/IRCServer/: server.cpp  server.h
